--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,72 @@
+# Python
 __pycache__/
-lightning_logs/
-datasets/
-.ipynb_checkpoints/
-*.mp4
-*.egg-info
-i3d_pretrained_400.pt
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyTorch
+*.pth
+*.pt
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Environment
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# VideoGPT specific
 data/
-samples/
-.venv/
+datasets/
+lightning_logs/
+checkpoints/
+*.gif
+*.png
+*.mp4
+*.avi
+*.mov
+
+# Logs
+*.log
+logs/
+
+# Temporary files
+*.tmp
+*.temp
